@@ -11,7 +11,9 @@ import javax.swing.JDialog;
 import javax.swing.JMenuItem;
 
 import edu.colorado.phet.common.phetcommon.application.PhetApplication;
+import edu.colorado.phet.common.phetcommon.simsharing.components.SimSharingJMenuItem;
 import edu.colorado.phet.common.phetcommon.view.menu.OptionsMenu;
+import edu.colorado.phet.faraday.FaradaySimSharing.UserComponents;
 import edu.colorado.phet.faraday.FaradayStrings;
 import edu.colorado.phet.faraday.control.dialog.BackgroundColorHandler;
 import edu.colorado.phet.faraday.control.dialog.GridControlsDialog;
@@ -23,21 +25,21 @@ import edu.colorado.phet.faraday.control.dialog.GridControlsDialog;
  * @author Chris Malley (cmalley@pixelzoom.com)
  */
 public class FaradayOptionsMenu extends OptionsMenu {
-    
+
     //----------------------------------------------------------------------------
     // Constructors
     //----------------------------------------------------------------------------
-    
+
     /**
      * Sole constructor.
-     * 
+     *
      * @param application
      */
     public FaradayOptionsMenu( final PhetApplication application ) {
         super();
 
         // Background Color menu item, disabled when dialog is open
-        final JMenuItem backgroundColorMenuItem = new JMenuItem( FaradayStrings.MENU_ITEM_BACKGROUND_COLOR );
+        final JMenuItem backgroundColorMenuItem = new SimSharingJMenuItem( UserComponents.backgroundColorMenuItem, FaradayStrings.MENU_ITEM_BACKGROUND_COLOR );
         backgroundColorMenuItem.setMnemonic( FaradayStrings.MNEMONIC_BACKGROUND_COLOR );
         backgroundColorMenuItem.addActionListener( new ActionListener() {
             public void actionPerformed( ActionEvent e ) {
@@ -48,6 +50,7 @@ public class FaradayOptionsMenu extends OptionsMenu {
                     public void windowClosed( WindowEvent e ) {
                         backgroundColorMenuItem.setEnabled( true );
                     }
+
                     // called when the close button in the dialog's window dressing is clicked
                     public void windowClosing( WindowEvent e ) {
                         backgroundColorMenuItem.setEnabled( true );
@@ -60,7 +63,7 @@ public class FaradayOptionsMenu extends OptionsMenu {
         add( backgroundColorMenuItem );
 
         // Grid Controls dialog, disabled when dialog is open
-        final JMenuItem gridControlsMenuItem = new JMenuItem( FaradayStrings.MENU_ITEM_GRID_CONTROLS );
+        final JMenuItem gridControlsMenuItem = new SimSharingJMenuItem( UserComponents.backgroundColorMenuItem, FaradayStrings.MENU_ITEM_GRID_CONTROLS );
         gridControlsMenuItem.setMnemonic( FaradayStrings.MNEMONIC_GRID_CONTROLS );
         gridControlsMenuItem.addActionListener( new ActionListener() {
             public void actionPerformed( ActionEvent e ) {
@@ -70,6 +73,7 @@ public class FaradayOptionsMenu extends OptionsMenu {
                     public void windowClosed( WindowEvent e ) {
                         gridControlsMenuItem.setEnabled( true );
                     }
+
                     // called when the close button in the dialog's window dressing is clicked
                     public void windowClosing( WindowEvent e ) {
                         gridControlsDialog.revert();
