@@ -1,3 +1,4 @@
+1/17/12 #3214, add sim-sharing to menu items
 1/17/12 #3214, add sim-sharing to Turbine control panel
 1/17/12 #3214, add sim-sharing to Pickup Coil control panel
 1/17/12 #3214, add sim-sharing to Electromagnet control panel
